# NarrativeDesk

./: .gitignore  AGENTS.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  vercel.json
.github/workflows/: verify.yml
apps/api/: main.py  service.py
apps/web/: index.html  package.json  smoke.mjs  static-smoke.mjs
data/fixtures/: case_index.json  public_case_index.json  synthetic_event.json  synthetic_event_aurora.json  synthetic_event_lyra.json  synthetic_validation.json  synthetic_validation_aurora.json  (+1 more)
examples/: real_case_config_template.json  sample_report.md  source_pack_template.json
schemas/: narrative_ledger.schema.json  real_case_config.schema.json  replay_bundle_manifest.schema.json  source_pack.schema.json  validation_fixture.schema.json
scripts/: check_public_hygiene.py  extract_prior_art_market_bars.py  generate_demo_assets.py  inspect_prior_art.py  run_aapl_rehearsal.py  run_real_pack_smoke.py
tests/: schema_utils.py  test_api.py  test_case_index.py  test_cases.py  test_citation_qa.py  test_corpus_quality.py  test_evaluation.py  test_market.py  test_pipeline.py  test_prior_art.py  test_public_hygiene.py  test_real_case_config_schema.py  test_real_case_workflow.py  test_real_data.py  test_real_provenance.py  test_replay.py  test_replay_bundle.py  test_replay_bundle_manifest_schema.py  test_report.py  test_schema.py  test_scoring.py  test_source_clustering.py  test_source_discovery.py  test_source_pack.py  test_source_pack_schema.py  test_source_reliability.py  test_validation_fixture.py  test_validation_fixture_schema.py
(+78 files in other folders)
